start of cleanup/fixing of the builder ai